fixed broken style

--- a/instagram-app/src/App.css
+++ b/instagram-app/src/App.css
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
-  max-width: 30%;
   margin: 0 auto;
+  width: 60%;
 }
 
 .App-logo {
@@ -68,10 +68,7 @@ img {
 
 .img {
   width: 100%;
-}
 
-.imgDiv {
-  width: 100%;
 }
 
 .flexrow {
